# Nvidia-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
app/: __init__.py
app/agents/: __init__.py  base.py  prompts.py  registry.py
app/api/: __init__.py  dashboard.py
app/cli/: app.py
app/defaults/: __init__.py
app/defaults/config/: __init__.py  agents.yaml  models.yaml  rules.md
app/memory/: __init__.py  context.py  store.py
app/models/: __init__.py  config.py  runtime.py  settings.py
app/orchestrator/: __init__.py  approvals.py  engine.py
app/providers/: base.py  demo.py  factory.py  nvidia.py
app/tools/: __init__.py  filesystem.py  git_tools.py  repo.py  shell.py
app/utils/: logging.py  patches.py
app/workflows/: __init__.py  analyze_repo.py  implement.py  release.py  review.py
config/: agents.yaml  models.yaml  rules.md
config/prompts/: coder.md  context.md  docs.md  planner.md  release.md  reviewer.md  tester.md
docs/: architecture.md  demo.md  github.md  index.md  quickstart.md
docs/assets/: README.md
docs/stylesheets/: extra.css
scripts/: bootstrap.ps1  demo.ps1  docs.ps1  run_dashboard.ps1
tests/: test_config.py  test_demo_provider.py  test_memory.py  test_packaged_defaults.py  test_patch_preview.py
wiki/: Architecture-Notes.md  Demo-Workflow.md  Home.md  Quickstart.md  README.md  Release-Process.md  _Sidebar.md
(+8 files in other folders)
